@@ -1,2 +1,4 @@
 .project
 .svn
+^.*\.Rproj$
+^\.Rproj\.user$
